clusters/takeout/apps/valheim/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valheim-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: valheim-server
  serviceName: valheim-server
  replicas: 1
  template:
    metadata:
      labels:
        app: valheim-server
    spec:
      containers:
      - name: valheim-server
        image: lloesche/valheim-server
        ports:
        - containerPort: 2456
          name: server-one
        - containerPort: 2457
          name: server-two
        - containerPort: 9001
          name: supervisor
        volumeMounts:
        - name: valheim-config
          mountPath: /config
        - name: valheim-data
          mountPath: /opt/valheim
      volumes:
        - name: valheim-config
          persistentVolumeClaim:
            claimName: valheim-config
        - name: valheim-data
          persistentVolumeClaim:
            claimName: valheim-data
