clusters/takeout/apps/valheim/valheim-nginx-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-files
  namespace: default
spec:
  selector:
    matchLabels:
      app: valheim-files
  template:
    metadata:
      labels:
        app: valheim-files
    spec:
      containers:
      - name: valheim-files
        image: nginx
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/
            name: valheim-files-config
          - mountPath: /usr/share/nginx/html/
            name: valheim-config
      volumes:
        - name: valheim-config
          persistentVolumeClaim:
            claimName: valheim-config
        - name: valheim-files-config
          configMap:
            name: valheim-files-config
