clusters/takeout/apps/valheim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valheim-server-tcp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: default-valheim-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.67
  externalTrafficPolicy: Local
  selector:
    app: valheim-server
  ports:
  - port: 80
    protocol: TCP
    name: status
    targetPort: 80
  - port: 9001
    protocol: TCP
    name: supervisor
    targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: valheim-server-udp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: default-valheim-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.67
  externalTrafficPolicy: Local
  selector:
    app: valheim-server
  ports:
  - port: 2456
    protocol: UDP
    name: server-one
    targetPort: 2456
  - port: 2457
    protocol: UDP
    name: server-two
    targetPort: 2457
